// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordWithmeter component renders with no props 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value=""
  />
  <div
    className="strength-meter hidden"
  >
    <div
      className="strength-meter-fill"
      data-strength="empty"
    />
  </div>
  <div
    className="strength-meter-quality hidden"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value="a"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={0}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 2`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={1}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 3`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={2}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 4`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321!,"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={3}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is good
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 5`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <Choice
    checked={false}
    className="ds-u-float--right"
    inputPlacement="left"
    name="show password"
    onChange={[Function]}
    size="small"
    type="checkbox"
    value="Show password"
  >
    Show password
  </Choice>
  <TextField
    hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
    label="Password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321!,@_"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={4}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is great
  </div>
</div>
`;
